--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorKeepActive">#07de3d</color>
     <color name="colorKeepInactive">#d72934</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorButtonGradient">#691218</color>
 </resources>
