--- a/app/src/main/res/layout/intro_activity_layout.xml
+++ b/app/src/main/res/layout/intro_activity_layout.xml
@@ -4,40 +4,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     tools:context=".gui.IntroActivity">
 
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="55dp" />
+
+    <ImageView
+        android:id="@+id/imgIntroFiveDice"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
     <EditText
-        android:gravity="center_horizontal"
         android:id="@+id/txtPlayerOneName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="255dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:background="@drawable/text_background"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:hint="@string/strPlayerOneName"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:alpha="0.7"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="15dp" />
 
     <EditText
-        android:gravity="center_horizontal"
         android:id="@+id/txtPlayerTwoName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="255dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:background="@drawable/text_background"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:hint="@string/strTwoPlayerName"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textAlignment="gravity"
+        android:alpha="0.7"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="15dp" />
 
     <EditText
-        android:gravity="center_horizontal"
         android:id="@+id/txtTargetScore"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="255dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:background="@drawable/text_background"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:hint="@string/strTargetScore"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:alpha="0.7"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
 
     <Button
         android:id="@+id/btnStartGame"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="PLAY" />
+        android:layout_width="174dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:background="@drawable/button_background"
+        android:text="PLAY"
+        android:textColor="@color/colorWhite"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 </LinearLayout>
