--- a/app/src/main/res/layout/main_activity_layout.xml
+++ b/app/src/main/res/layout/main_activity_layout.xml
@@ -9,26 +9,27 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="57dp" />
+        android:layout_height="55dp" />
 
     <ImageView
         android:id="@+id/imgFiveDice"
         android:layout_width="wrap_content"
-        android:layout_height="158dp"
+        android:layout_height="140dp"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="95dp" />
+        android:layout_height="90dp" />
 
     <Button
         android:id="@+id/btnPlay"
         android:layout_width="174dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_background"
+        android:layout_height="40dp"
         android:layout_gravity="center"
+        android:background="@drawable/button_background"
         android:text="@string/strPlay"
         android:textColor="@color/colorWhite"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <Space
@@ -38,10 +39,11 @@
     <Button
         android:id="@+id/btnLeaderboard"
         android:layout_width="174dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_background"
+        android:layout_height="40dp"
         android:layout_gravity="center"
+        android:background="@drawable/button_background"
         android:text="@string/strLeaderboard"
         android:textColor="@color/colorWhite"
+        android:textSize="16sp"
         android:textStyle="bold" />
 </LinearLayout>
