--- a/app/src/main/res/layout/game_activity_layout.xml
+++ b/app/src/main/res/layout/game_activity_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_light"
     android:orientation="vertical"
-    tools:context=".gui.GameActivity">
+    tools:context=".gui.activity.GameActivity">
 
     <LinearLayout
         android:id="@+id/layoutTop"
