Added Gamemode selection feature

--- a/app/src/main/res/layout/intro_activity_layout.xml
+++ b/app/src/main/res/layout/intro_activity_layout.xml
@@ -23,18 +23,28 @@
         android:layout_width="match_parent"
         android:layout_height="25dp" />
 
+    <Spinner
+        android:id="@+id/spGamemode"
+        android:layout_width="255dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="13dp" />
+
     <EditText
         android:id="@+id/txtPlayerOneName"
         android:layout_width="255dp"
         android:layout_height="30dp"
         android:layout_gravity="center"
+        android:alpha="0.7"
         android:background="@drawable/text_background"
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="@string/strPlayerOneName"
         android:inputType="textPersonName"
-        android:textAlignment="center"
-        android:alpha="0.7"/>
+        android:textAlignment="center" />
 
     <Space
         android:layout_width="match_parent"
@@ -62,13 +72,13 @@
         android:layout_width="255dp"
         android:layout_height="30dp"
         android:layout_gravity="center"
+        android:alpha="0.7"
         android:background="@drawable/text_background"
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="@string/strTargetScore"
-        android:inputType="textPersonName"
-        android:textAlignment="center"
-        android:alpha="0.7"/>
+        android:inputType="number"
+        android:textAlignment="center" />
 
     <Space
         android:layout_width="match_parent"
