--- a/app/src/main/res/layout/intro_activity_layout.xml
+++ b/app/src/main/res/layout/intro_activity_layout.xml
@@ -26,12 +26,15 @@
     <Spinner
         android:id="@+id/spGamemode"
         android:layout_width="255dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
+        android:background="@drawable/text_background"
+        android:alpha="0.7"
+        android:textAlignment="center"
         android:layout_gravity="center" />
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="13dp" />
+        android:layout_height="23dp" />
 
     <EditText
         android:id="@+id/txtPlayerOneName"
@@ -55,17 +58,14 @@
         android:layout_width="255dp"
         android:layout_height="30dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:alpha="0.7"
         android:background="@drawable/text_background"
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="@string/strTwoPlayerName"
         android:inputType="textPersonName"
-        android:textAlignment="gravity"
-        android:alpha="0.7"/>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="10dp" />
+        android:textAlignment="gravity" />
 
     <EditText
         android:id="@+id/txtTargetScore"
