--- a/app/src/main/res/layout/info_activity_layout.xml
+++ b/app/src/main/res/layout/info_activity_layout.xml
@@ -20,7 +20,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:gravity="center"
+        android:text="@string/strInfoOut"
         android:textColor="@color/black_color"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:inputType="textMultiLine"
+        android:maxLines="@integer/iCustomerNameLine"
+        android:minLines="@integer/iCustomerNameLine"/>
 </LinearLayout>
