--- a/app/src/main/res/layout/info_activity_layout.xml
+++ b/app/src/main/res/layout/info_activity_layout.xml
@@ -14,16 +14,20 @@
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_delete" />
 
-    <TextView
+    <EditText
         android:id="@+id/txtvInfoOut"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="1"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:maxLines="@integer/iCustomerNameLine"
+        android:minLines="@integer/iCustomerNameLine"
         android:text="@string/strInfoOut"
         android:textColor="@color/black_color"
         android:textSize="20sp"
-        android:inputType="textMultiLine"
-        android:maxLines="@integer/iCustomerNameLine"
-        android:minLines="@integer/iCustomerNameLine"/>
+        android:layout_marginLeft="@dimen/iWidth"
+        android:layout_marginRight="@dimen/iWidth"
+        />
+
 </LinearLayout>
