--- a/app/src/main/res/layout/info_activity_layout.xml
+++ b/app/src/main/res/layout/info_activity_layout.xml
@@ -9,7 +9,7 @@
     tools:context=".gui.activity.InfoActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgInfoFiveDice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_delete" />
