--- a/app/src/main/res/layout/main_activity_layout.xml
+++ b/app/src/main/res/layout/main_activity_layout.xml
@@ -13,13 +13,15 @@
 
     <ImageView
         android:id="@+id/imgFiveDice"
-        android:layout_width="wrap_content"
-        android:layout_height="120dp"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        android:layout_width="350dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/logo" />
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="60dp" />
+        android:layout_height="30dp" />
 
     <Button
         android:id="@+id/btnPlay"
