--- a/app/src/main/res/layout/intro_activity_layout.xml
+++ b/app/src/main/res/layout/intro_activity_layout.xml
@@ -15,9 +15,11 @@
 
     <ImageView
         android:id="@+id/imgIntroFiveDice"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/logo" />
 
     <Space
         android:layout_width="match_parent"
