--- a/app/src/main/res/layout/list_view_item_layout.xml
+++ b/app/src/main/res/layout/list_view_item_layout.xml
@@ -4,24 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtPlayerName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/strPlayerName"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txtPlayerPvPWins"
+            android:id="@+id/txtPlayerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="@string/strPlayerName"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/txtPlayerPvPWins"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
             android:text="@string/strPlayerPvPPoint"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="16sp" />
@@ -30,9 +31,9 @@
             android:id="@+id/txtPlayerPvEWins"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.7"
             android:text="@string/strPlayerPvEPoint"
-            android:textColor="@android:color/holo_red_light"
+            android:textColor="@android:color/holo_red_dark"
             android:textSize="16sp" />
     </LinearLayout>
 
