--- a/app/src/main/res/layout/main_activity_layout.xml
+++ b/app/src/main/res/layout/main_activity_layout.xml
@@ -4,24 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:orientation="vertical"
     tools:context=".gui.activity.MainActivity">
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="40dp" />
-
     <ImageView
         android:id="@+id/imgFiveDice"
-        android:layout_width="350dp"
-        android:layout_height="140dp"
+        android:layout_width="320dp"
+        android:layout_height="130dp"
         android:layout_gravity="center"
         android:scaleType="fitXY"
         app:srcCompat="@drawable/logo" />
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="30dp" />
+        android:layout_height="60dp" />
 
     <Button
         android:id="@+id/btnPlay"
