--- a/app/src/main/res/drawable/text_background.xml
+++ b/app/src/main/res/drawable/text_background.xml
@@ -3,12 +3,21 @@
     <item >
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle" >
-            <solid android:color="@color/colorWhite"></solid>
+            <!-- View background color -->
+            <solid
+                android:color="@color/colorWhite" >
+            </solid>
+
+            <!-- View border color and width -->
+            <stroke
+                android:width="1dp"
+                android:color="@color/black_color" >
+            </stroke>
+
+            <!-- The radius makes the corners rounded -->
             <corners
-                android:bottomRightRadius="25dp"
-                android:bottomLeftRadius="25dp"
-                android:topLeftRadius="25dp"
-                android:topRightRadius="25dp"/>
+                android:radius="2dp"   >
+            </corners>
         </shape>
     </item>
 </selector>
