--- a/app/src/main/res/layout/leaderboard_activity_layout.xml
+++ b/app/src/main/res/layout/leaderboard_activity_layout.xml
@@ -10,35 +10,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/txtPlayerNameText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/strPlayerName"
             android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:gravity="center"
+            android:background="@drawable/text_background"/>
 
         <TextView
             android:id="@+id/txtPlayerPvPWinsText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/strPlayerPvPPoint"
             android:textColor="@android:color/holo_red_dark"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:gravity="center"
+            android:background="@drawable/text_background"/>
 
         <TextView
             android:id="@+id/txtPlayerPvEText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/strPlayerPvEPoint"
             android:textColor="@android:color/holo_red_dark"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:gravity="center"
+            android:background="@drawable/text_background"/>
     </LinearLayout>
 
     <ListView
