--- a/app/src/main/res/layout/list_view_item_layout.xml
+++ b/app/src/main/res/layout/list_view_item_layout.xml
@@ -12,6 +12,18 @@
         android:background="@drawable/text_background"
         android:text="@string/strPlayerName"
         android:textColor="@android:color/black"
+        android:textSize="18sp"
+        />
+
+    <TextView
+        android:id="@+id/txtPlayerPvPWins"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/text_background"
+        android:gravity="center"
+        android:text="@string/strPlayerPvPPoint"
+        android:textColor="@android:color/holo_red_dark"
         android:textSize="18sp" />
 
     <TextView
@@ -22,16 +34,7 @@
         android:background="@drawable/text_background"
         android:text="@string/strPlayerPvEPoint"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/txtPlayerPvPWins"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="@drawable/text_background"
-        android:text="@string/strPlayerPvPPoint"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:gravity="center"/>
 
 </LinearLayout>
