--- a/app/src/main/res/layout/leaderboard_activity_layout.xml
+++ b/app/src/main/res/layout/leaderboard_activity_layout.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".gui.activity.LeaderboardActivity">
+    tools:context=".gui.activity.LeaderboardActivity"
+    android:background="@drawable/background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,6 +46,11 @@
             android:gravity="center"
             android:background="@drawable/text_background"/>
     </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dpValueOfSpace" />
+
 
     <ListView
         android:id="@+id/lvAllPlayers"
