--- a/app/src/main/res/layout/info_activity_layout.xml
+++ b/app/src/main/res/layout/info_activity_layout.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".gui.activity.InfoActivity">
+    tools:context=".gui.activity.InfoActivity"
+    android:background="@drawable/background">
 
     <ImageView
         android:id="@+id/imgInfoFiveDice"
@@ -21,8 +22,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_centerVertical="true"
+
         android:layout_marginLeft="@dimen/iWidth"
         android:layout_marginRight="@dimen/iWidth"
+        android:ellipsize="start"
         android:layout_weight="1"
         android:ems="10"
         android:inputType="textMultiLine"
@@ -31,6 +35,10 @@
         android:text="@string/strInfoOut"
         android:textColor="@color/black_color"
         android:textSize="20sp"
-        android:visibility="visible" />
+        android:textStyle="bold"
+        android:visibility="visible"
+
+        android:background="@drawable/gradiant"/>
+
 
 </LinearLayout>
