--- a/app/src/main/res/layout/info_activity_layout.xml
+++ b/app/src/main/res/layout/info_activity_layout.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".gui.activity.InfoActivity"
-    android:background="@drawable/background">
+    android:background="@color/colorWhite">
 
     <ImageView
         android:id="@+id/imgInfoFiveDice"
